salesforce-metadata/objects/Comp_Plan__c/Comp_Plan__c.object-meta.xml
<CustomObject>
    <label>Comp Plan</label>
    <pluralLabel>Comp Plans</pluralLabel>
    <nameField>
        <label>Plan Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>