salesforce-metadata/objects/Comp_Plan__c/fields/Base_Rate__c.field-meta.xml
<CustomField>
    <fullName>Base_Rate__c</fullName>
    <label>Base Rate</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>