salesforce-metadata/objects/Comp_Plan__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <label>Fiscal Year</label>
    <type>Text</type>
    <length>10</length>
    <required>true</required>
</CustomField>