salesforce-metadata/objects/Comp_Plan__c/fields/Metric_Type__c.field-meta.xml
<CustomField>
    <fullName>Metric_Type__c</fullName>
    <label>Metric Type</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bookings</fullName>
                <default>true</default>
                <label>Bookings</label>
            </value>
            <value>
                <fullName>Stage0_Opps</fullName>
                <label>Stage 0 Opps</label>
            </value>
            <value>
                <fullName>Overlay_Bookings</fullName>
                <label>Overlay Bookings</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>