salesforce-metadata/objects/Comp_Plan__c/fields/Payout_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Payout_Frequency__c</fullName>
    <label>Payout Frequency</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
                <default>true</default>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>