salesforce-metadata/objects/Comp_Plan__c/fields/Plan_Level__c.field-meta.xml
<CustomField>
    <fullName>Plan_Level__c</fullName>
    <label>Plan Level</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IC</fullName>
                <default>true</default>
                <label>IC</label>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>VP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>