salesforce-metadata/objects/Comp_Plan__c/fields/Quota_Target__c.field-meta.xml
<CustomField>
    <fullName>Quota_Target__c</fullName>
    <label>Quota Target</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>