salesforce-metadata/objects/Comp_Plan__c/fields/Role_Type__c.field-meta.xml
<CustomField>
    <fullName>Role_Type__c</fullName>
    <label>Role Type</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AE</fullName>
                <default>true</default>
                <label>AE</label>
            </value>
            <value>
                <fullName>SDR</fullName>
            </value>
            <value>
                <fullName>SE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>